plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.gluonhq.gluonfx-gradle-plugin' version '1.0.22'
}

group 'com.nbeghin.ccv2.api.gui'
version '1.0.7'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
    url = 'https://github.com/nicolabeghin/sap-commerce-cloud-api-gui/'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'sap.commerce.cloud.management.api.gui.main'
    mainClass = 'com.nbeghin.ccv2.api.gui.sapcommercecloudapigui.App'
}

run {
    // https://github.com/controlsfx/controlsfx/wiki/Using-ControlsFX-with-JDK-9-and-above
    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls']
}
gluonfx {
    mainClassName = 'com.nbeghin.ccv2.api.gui.sapcommercecloudapigui.App'
    enableSwRendering = true
}
javafx {
    version = '22.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation('org.controlsfx:controlsfx:11.2.1')
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
    implementation "com.squareup.retrofit2:converter-scalars:2.11.0"
    implementation "com.squareup.retrofit2:converter-gson:2.11.0"
    implementation "io.swagger.core.v3:swagger-annotations:2.0.0"
    implementation ("org.apache.oltu.oauth2:org.apache.oltu.oauth2.client:1.0.2") {
        exclude group: "org.json", module: "json"
        exclude group: "org.apache.oltu.oauth2", module: "org.apache.oltu.oauth2.common"
    }
    implementation 'org.json:json:20231013'
    implementation "javax.annotation:jsr250-api:1.0"
    implementation "io.gsonfire:gson-fire:1.8.0"
    implementation "org.threeten:threetenbp:1.3.5"

    // https://github.com/spring-projects/spring-boot/issues/37152#issuecomment-1719671229
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
}
